# study-bittorrent-client

./: CMakeLists.txt
bittorrent/: CMakeLists.txt
bittorrent/include/: hash.h  httpClient.h  torrent.h  utils.h
bittorrent/include/bencode/: bencode.h
bittorrent/source/: httpClient.cpp  torrent.cpp  utils.cpp
bittorrent/source/bencode/: bencode.cpp
cmake/: tools.cmake
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: bencode.cpp  httpClient.cpp  sha1.cpp  torrent.cpp
